Kubernetes/projekt-kubernetes/mybackend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: mybackend-deployment
  labels:
    component: mybackend
    app: myapp

spec: 
  template: 
    metadata:
      name: mybackend-pod
      labels:
        component: mybackend
        app: myapp
    spec:
      containers: 
        - name: mybackend-container
          image: luko140/mybackend:latest
                  
  replicas: 1
  selector:
    matchLabels:
      app: myapp
      component: mybackend
