Kubernetes/projekt-kubernetes/mybackend-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: mybackend-nodeport

spec:
  type: NodePort
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 31000
      
  selector:
    component: mybackend
    app: myapp
