Kubernetes/projekt-kubernetes/mynginx-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: mynginx-clusterip

spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      
  selector:
    component: frontend
    app: myapp
